Changes made to the css to make content fit better in page. Problem acknowledged with splash image. Fixed overflow in orders going into the order ticket. Made it more readable and programmed the hiding of overflow so price is distinctively seen for each food item.

--- a/myapp/src/css/Menu.css
+++ b/myapp/src/css/Menu.css
@@ -35,7 +35,7 @@ button:hover {
 }
 
 .splash-image{
-    width: 1440px;
+    width: 100%;
 }
 .header-image {
     height: 64px;
@@ -99,14 +99,14 @@ button:hover {
 }
 
 .ordering-container {
-    position: -webkit-sticky;
-    position: sticky;
+    position:-webkit-sticky;
+    position:sticky;
+    top:0;
     border: 5px solid black;
     background-color: #f8cb2e;
     font-size: 32px;
     width: 400px;
-    white-space: nowrap;
-    overflow: hidden;
+    z-index: 1000;
 }
 
 .table{
@@ -164,6 +164,11 @@ button:hover {
     max-width: 15ch;
 }
 
+.order-row {
+    vertical-align: middle;
+    overflow:auto;
+}
+
 .money {
     font-family: "Bayon";
     font-size: 28px;
@@ -195,8 +200,8 @@ button:hover {
 .expanded-div {
     justify-content: left;
     position: absolute;
+    top:482px;
     height: fit-content;
-    top: 82%;
     width: 850px;
     border: 5px solid #f8cb2e;
 }
